# trainings-project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  h -u origin main  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: logging.yml  settings.yml
docs/: COMMIT_GUIDE.md  DATA_MANAGEMENT.md  GUIA_COMPLETO.md
scripts/: generate_commit_info.py  smart_commit.py
src/: __init__.py  main.py
src/core/: __init__.py
src/core/data_management/: __init__.py  dataset_validator.py  interface.py  roboflow_downloader.py
src/core/evaluation/: __init__.py
src/core/images_labels/: __init__.py
src/core/inference/: __init__.py
src/core/training/: __init__.py  interface.py  training_config_pydantic.py  training_pipeline.py  yolov8_trainer.py
src/utils/: __init__.py  config_loader.py  logger.py
tests/: __init__.py  test_config_loader.py  test_dataset_validator.py  test_roboflow_downloader.py  test_training_config.py  test_yolov8_trainer.py
typings/: pytest.pyi
